--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.7", features = ["dynamic"] }
+bevy = { version = "0.9", features = ["dynamic", "bevy_scene", "bevy_asset"] }
 bevy-inspector-egui = "*"
