--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pewpew"
+name = "pew-pew"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.9", features = ["dynamic", "bevy_scene", "bevy_asset"] }
 bevy-inspector-egui = "*"
+bevy_rapier3d = {version="0.19.0", features = [ "simd-stable", "debug-render" ]}
