--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.10.0", features = ["bevy_scene", "bevy_asset"] }
-bevy-inspector-egui = "*"
+bevy = { version = "0.10.1", features = ["bevy_scene", "bevy_asset"] }
+bevy-inspector-egui = "0.18.*"
 bevy_rapier3d = {version="0.21.0", features = [ "simd-stable", "debug-render" ]}
