Set the CARGO_MANIFEST_DIR to allow bevy to find the assets

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,11 @@
                 }
             },
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "CARGO_MANIFEST_DIR": "${workspaceFolder}",
+                "RUST_LOG": "warn,bevy_xpbd_3d=trace"
+            }
         },
         {
             "type": "lldb",
