--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ authors = ["Per B. Nielsen"]
 [dependencies]
 bevy = { version = "0.*", features = ["bevy_scene", "bevy_asset"] }
 bevy-inspector-egui = "0.*"
+bevy_math = "0.13.0"
 bevy_xpbd_3d = "0.*"
